# TechBrain

./: .gitignore  README.md  compose.yaml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/migrations/: README.md  env.py  script.py.mako
backend/migrations/versions/: 20260624_0001_create_migration_baseline.py  20260625_0002_create_knowledge_documents.py  20260625_0003_add_knowledge_document_body.py  20260626_0004_create_knowledge_sync_tasks.py  20260626_0005_create_knowledge_categories.py  20260629_0006_link_documents_to_categories.py  20260629_0007_create_knowledge_tags.py
backend/src/techbrain/: __init__.py  app.py  main.py
backend/src/techbrain/api/: router.py
backend/src/techbrain/core/: config.py  context.py  exceptions.py  logging.py  middleware.py
backend/src/techbrain/db/: __init__.py  base.py  migrate.py  session.py
backend/src/techbrain/knowledge/: __init__.py  category_management.py  category_query.py  category_sync.py  config.py  (+10 more)
backend/tests/: conftest.py  test_category_api.py  test_category_management.py  test_category_sync.py  test_config.py  test_database.py  test_document_api.py  test_document_detail_api.py  test_exceptions.py  test_health.py  test_knowledge_category_model.py  test_knowledge_config.py  test_knowledge_document_model.py  test_knowledge_full_sync.py  test_knowledge_overview_api.py  test_knowledge_parser.py  test_knowledge_scanner.py  test_knowledge_scheduler.py  test_knowledge_sync.py  test_knowledge_sync_api.py  test_knowledge_tag_model.py  test_logging.py  test_tag_api.py  test_tag_management.py
(+93 files in other folders)
